# libmypaint

./: .gitignore  BUILDING.md  README.md  autogen.sh  configure.ac  mypaint-fixed-tiled-surface.c  mypaint-fixed-tiled-surface.h  mypaint-tiled-surface.c  output.ppm
doc/: ANDROID.md  ANDROID_PERFORMANCE_PLAN.md  BUILD_SYSTEMS_TUTORIAL.md  GOBJECT_INTROSPECTION.md  STEP_BY_STEP_FROM_SCRATCH.md
examples/: custom_brush  custom_brush.c  minimal  minimal.c  run-minimal.sh
examples/android/: README.md  settings.gradle
examples/android/app/: build.gradle  proguard-rules.pro
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/assets/: pencil_soft_2b.png.b64
examples/android/app/src/main/cpp/: CMakeLists.txt  mypaint_jni.c  mypaint_log.h
examples/android/app/src/main/java/com/example/mypaint/: ColorWheel.kt  DrawingView.kt  GLDrawingView.kt  MainActivity.kt  MyPaintBridge.kt  PointerEvent.kt  TouchEventManager.kt
examples/android/app/src/main/jniLibs/: README.txt
examples/android/app/src/main/res/layout/: activity_main.xml
scripts/: build-android-so-libs.sh
